--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     },
     "main": "simple-walk.js",
     "version": "0.1.1",
+    "dependencies": {
+        "underscore": "*"
+    },
     "devDependencies": {
         "underscore": "*"
     },
